Add ToggleImage shortcode and update md files

--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -107,7 +107,12 @@ afleiden. Nu moeten we alles uitwerken en de limiet uitrekenen. Om alles een
 beetje verteerbaar te houden, gaan we die harige $f(\blue{x + \Delta x})$ eerst
 apart uitwerken:
 
-![Uitwerking van $f(x + \Delta x)$](img/f_delta_x_uitwerking.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Uitwerking van $f(x + \Delta x)$](img/f_delta_x_uitwerking_stripped.png)
+![Uitwerking van $f(x + \Delta x), met uitleg$](img/f_delta_x_uitwerking.png)
+
+</ToggleImage>
 
 Die $f(x + \Delta x)$ blijft een serieus harige uitdrukking... 🙄
 Als je terug even naar boven gaat, zie je in de definitie van $f'(x)$ in de
@@ -115,7 +120,12 @@ teller van de breuk "$f(x + \Delta x) - f(x)$" staan. We moeten van onze $f(x +
 \Delta x)$ dus nog $f(x)$ aftrekken. Gelukkig vallen er dan een hele hoop
 dingen weg:
 
-![Uitwerking van de teller van de definitie van een afgeleide functie voor onze tweedegraadsfunctie.](img/afgeleide_teller_uitwerking.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Uitwerking van de teller van de definitie van een afgeleide functie voor onze tweedegraadsfunctie.](img/afgeleide_teller_uitwerking_stripped.png)
+![Uitwerking van de teller van de definitie van een afgeleide functie voor onze tweedegraadsfunctie, met uitleg per stap.](img/afgeleide_teller_uitwerking.png)
+
+</ToggleImage>
 
 We hebben nu dus de teller gevonden van onze limiet:
 
@@ -126,7 +136,12 @@ staat. Het is zelfs zo dat **elke term in de breuk** een factor $\Delta x$
 bevat. Dat betekent dat we de **breuk kunnen vereenvoudigen** door teller en
 noemer te delen door $\Delta x$.
 
-![$\Delta x$ wegdelen uit teller en noemer van de afgeleide.](img/delta_x_wegdelen.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![$\Delta x$ wegdelen uit teller en noemer van de afgeleide.](img/delta_x_wegdelen_stripped.png)
+![$\Delta x$ wegdelen uit teller en noemer van de afgeleide, met uitleg.](img/delta_x_wegdelen.png)
+
+</ToggleImage>
 
 <Expand title="Mogen we de teller en noemer zomaar delen door $\Delta x$?">
 
@@ -147,7 +162,12 @@ x$, dus elke term zonder $\Delta x$ mogen we buiten de limiet zetten. Dan wordt
 de limiet heel eenvoudig en komt de afgeleide functie van $f(x) = -3x^2 + 4x -
 1$ tevoorschijn!
 
-![Uitwerking van de limiet om de afgeleide functie te berekenen.](img/limiet_uitrekenen.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Uitwerking van de limiet om de afgeleide functie te berekenen.](img/limiet_uitrekenen_stripped.png)
+![Uitwerking van de limiet om de afgeleide functie te berekenen, met uitleg.](img/limiet_uitrekenen.png)
+
+</ToggleImage>
 
 Ziezo! We hebben de afgeleide functie $f'(x)$ gevonden! 💪
 
