--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -127,9 +127,7 @@ $$
     plaats van gewoon de "verandering van de functiewaarde tussen $x_1$ en
     $x_2$".
 
-<Expand>
-
-Waarom zorgt die deling door $\orange{x_2} - \orange{x_1}$ voor een gemiddelde?
+<Expand title="Waarom zorgt die deling door $\orange{x_2} - \orange{x_1}$ voor een gemiddelde?">
 
 Stel dat je de **gemiddelde** score wilt berekenen die de leerlingen van een bepaalde klas haalden op een test. Dan ga je alle punten optellen en **delen door het totaal aantal testen**. Door te delen door het totaal aantal testen, krijg je de gemiddelde score **per test**.
 
@@ -139,14 +137,17 @@ Op dezelfde manier krijgen we de **gemiddelde** verandering van de functiewaarde
 
 We zeggen dat deze formule de **gemiddelde verandering van de functiewaarde** berekent per $x-$eenheid tussen $\orange{x_1}$ en $\orange{x_2}$.
 
+<ToggleImage toggleText="Toon uitleg">
+
+![](img/diff_quot_intuitie_stripped.png)
 ![](img/diff_quot_intuitie.png)
+
+</ToggleImage>
 
 Het is belangrijk om te weten dat we die formule niet enkel kunnen gebruiken om gemiddelde snelheid te berekenen, maar voor nog veel andere soorten van _gemiddelde verandering_.
 De formule wordt zelfs zo vaak gebruikt, dat ze een eigen naam heeft gekregen: het **differentiequotiënt**.
 
-<Expand>
-
-Waar komt de naam differentiequotiënt vandaan?
+<Expand title="Waar komt de naam differentiequotiënt vandaan?">
 
 Nu denk je misschien: "Een differ-**watte**?! 🤨" Waar komt die
 naam vandaan? Het woord bestaat uit twee stukken:
