--- a/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
@@ -73,7 +73,12 @@ Net zoals rechten, kunnen **vlakken evenwijdig zijn aan elkaar of elkaar snijden
 
 De definitie is namelijk voor beide **juist hetzelfde**. Alleen gaat het hier niet over rechten, maar over vlakken!
 
-![Visualisatie van evenwijdige en snijdende vlakken.](img/ligging_vlakken.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Visualisatie van evenwijdige en snijdende vlakken.](img/ligging_vlakken_stripped.png)
+![Visualisatie van evenwijdige en snijdende vlakken, met aanduiding van snijlijn.](img/ligging_vlakken.png)
+
+</ToggleImage>
 
 Als je de twee snijdende vlakken beter bekijkt 🤓, dan kunnen je twee dingen opvallen. Ten eerste vormen **alle snijpunten** samen, <Mute text="dat zijn de punten die in/op beide vlakken liggen,"/> **een rechte**. Ten tweede snijden de twee rechtse vlakken elkaar in dit voorbeeld loodrecht $\alpha \perp \beta$. Had je dit gezien? 👀
 
