--- a/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
@@ -43,7 +43,12 @@ Bert is bouwvakker. 👷 Hij is al enkele dagen bezig met het metsen van een muu
 
 Gelukkig heeft Bert altijd opgelet bij **wiskunde en fysica** en weet hij perfect hoe hij hiermee kan controleren of hij goed bezig is. 💡 Weet jij ook hoe je hiermee kan controleren of de muur recht staat?
 
-![Een schietlood werd vroeger gebruikt om te kijken of iets recht stond. Het lood wordt namelijk door de zwaartekracht aangetrokken en maakt hierdoor een rechte hoek met het oppervlak. Als het schietlood dan evenwijdig is met de muur, dan staat de muur mooi recht.](img/bouwvakker_bert.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Een bouwvakker met schietlood](img/bouwvakker_bert_stripped.png)
+![Een bouwvakker met schietlood en extra uitleg](img/bouwvakker_bert.png)
+
+</ToggleImage>
 
 Vermoedelijk komt de benaming *loodrecht* van dit gebruik.
 
