--- a/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
@@ -12,7 +12,12 @@ Vierkanten, rechthoeken, ruiten, trapezia en parallellogrammen zijn allemaal voo
 ## Wat is een vierhoek?
 Elke **vlakke figuur** die wordt gevormd door **vier zijden** en **vier hoeken** noemen we een **vierhoek**.
 
-![Een illustratie van een vierhoek.](img/vierhoeken.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Een vierhoek.](img/vierhoeken_stripped.png)
+![De diagonalen van een vierhoek.](img/vierhoeken.png)
+
+</ToggleImage>
 
 In bovenstaande vierhoek kunnen we ook nog **diagonalen** tekenen. Dit is een **lijnstuk** dat **twee niet-aangrenzende hoekpunten** met elkaar verbindt. In bovenstaande figuur wordt dit dan [AD] en [BC]. <Mute text="Druk op 'Toon uitleg' om deze te zien."/>
 
@@ -29,7 +34,12 @@ De **som van de hoeken van een vierhoek** is steeds **360°**.
 ## Het trapezium
 **Een trapezium** is een vierhoek met *ten minste* **één paar evenwijdige zijden**.
 
-![Een illustratie van een trapezium met aangeduide kenmerken.](img/trapezium.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Een trapezium](img/trapezium_stripped.png)
+![Naamgeving van de kenmerken van een trapezium](img/trapezium.png)
+
+</ToggleImage>
 
 [GH] en [IJ] zijn hier de **evenwijdige zijde**. De langste zijde noemt men de **grote basis zijde** en de korte zijde de **korte basis**. De twee **niet-evenwijdige zijden** noemt men de **opstaande zijden**.
 
@@ -49,7 +59,13 @@ De volgende stap is een **parallellogram**. Dit is een vierhoek met **twee paar 
 
 Deze definitie zorgt ervoor dat **elke parallellogram ook een trapezium** is, want een trapezium heeft **ten minste** één paar evenwijdige zijden. **Omgekeerd geldt dit niet**. Niet elke trapezium is een parallellogram ❗.
 
-![Een illustratie van een parallellogram.](img/parallellogram.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Een parallellogram.](img/parallellogram_stripped.png)
+![Eigenschappen van een parallellogram.](img/parallellogram.png)
+
+</ToggleImage>
+
 
 <Attention title="Eigenschappen van een parallellogram">
 
@@ -59,7 +75,12 @@ In een parallellogram zijn de **overstaande zijden even lang** en de **overstaan
 ## De rechthoek
 Een **rechthoek** is een vierhoek met **vier rechte hoeken**. Als je je de [les over rechten](./rechten) nog herinnert 💡, dan weet je dat wanneer **twee rechten loodrecht op eenzelfde derde rechte** staan, de rechten **onderling evenwijdig** zijn. We kunnen dit ook toepassen op een rechthoek (de zijden liggen op een rechte), waardoor we onmiddellijk kunnen afleiden dat een rechthoek **twee paar evenwijdige zijden** heeft. Met andere woorden: een **rechthoek** is ook een **parallellogram** en dus ook een **trapezium**. 🤯
 
-![Een illustratie van een rechthoek met de eigenschap van de diagonalen.](img/rechthoek.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Een rechthoek](img/rechthoek_stripped.png)
+![De diagonalen van een rechthoek](img/rechthoek.png)
+
+</ToggleImage>
 
 <Attention title="Eigenschappen van een rechthoek">
 
@@ -69,7 +90,12 @@ In een rechthoek zijn de **diagonalen even lang** en snijden ze elkaar **middend
 ## De ruit
 **Een ruit** is een vierhoek met **vier even lange zijden**.
 
-![Een illustratie van een ruit met de eigenschap van de diagonalen.](img/ruit.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![De ruit](img/ruit_stripped.png)
+![De diagonalen van een ruit](img/ruit.png)
+
+</ToggleImage>
 
 "Is dit niet gewoon een parallellogram?", vraag je je misschien af. 🧐 En je bent niet eens zo fout! Het is inderdaad een **parallellogram**, maar een **met vier gelijke zijden**.
 
