--- a/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
@@ -36,7 +36,12 @@ De **teller** van een breuk vertelt je dan **hoeveel stukken je neemt/eet**. ðŸ˜
 Zo is de pizza hieronder verdeeld in vier **gelijke** stukken. De *kleine* pizzapunt
 stelt $\frac{1}{4}$ voor, terwijl de rest van de pizza $\frac{3}{4}$ voorstelt.
 
-![Een pizza die in vier stukken is gedeeld, waarvan eentje wordt genomen.](img/pizza.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Een pizza die in vier stukken is gedeeld, waarvan eentje wordt genomen.](img/pizza_stripped.png)
+![Een pizza die in vier stukken is gedeeld, waarvan eentje wordt genomen (met uitleg).](img/pizza.png)
+
+</ToggleImage>
 
 Een andere manier om aan breuken te denken is door middel van **een deling**. Zo betekent $\frac{3}{4}$ hetzelfde als $3 : 4$. De uitkomst van beide is $0{,}75$. Het is **veel makkelijker** om een **deling als een breuk te schrijven**, daarom werken wiskundigen veel liever met breuken in plaats van het deelteken.
 
