--- a/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
@@ -82,7 +82,12 @@ Hoera! 👍
 ### Extra voorbeeld
 Kan jij mij vertellen welke stappen ik heb genomen om onderstaande optelling gelijknamig te maken?
 
-![Het gelijknamig maken van twee breuken met optionele uitleg.](img/extra_voorbeeld.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Twee breuken gelijknamig maken.](img/extra_voorbeeld_stripped.png)
+![Twee breuken gelijknamig maken met uitleg.](img/extra_voorbeeld.png)
+
+</ToggleImage>
 
 ## Gelijknamige breuken optellen en aftrekken
 Het moeilijkste deel is achter de rug! 😌🎉 Nadat we twee gelijknamige breuken hebben, moeten we alleen nog de **tellers optellen of aftrekken** volgens de [regels die we reeds kennen](./rekenen_gehele_getallen). We kunnen nu dus eindelijk berekenen hoeveel pizza we in totaal hebben gegeten.
