--- a/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
@@ -5,7 +5,6 @@ weight: 1
 draft: true
 description: "In deze les overlopen we enkele basisbegrippen in de meetkunde, zoals punten, lijnen, vlakken, rechten... We bekijken wat ze betekenen, hoe we ze kunnen gebruiken en ook enkele eigenschappen en definities komen aan bod."
 tags: ["Meetkundige begrippen", "Rechten", "Vlakken"]
-images: []
 ---
 Vooraleer we de wondere wereld van de meetkunde <Mute text="of geometrie"/> kunnen betreden 🗝️, moeten we enkele basisbegrippen kennen. Op deze kennis kunnen we vervolgens voortbouwen om de vormen en figuren die we tegenkomen wiskundig te beschrijven.
 
@@ -31,7 +30,12 @@ Naast een punt en een vlak werken we in de meetkunde ook met **rechten**. Een **
 
 **Punten** die **op dezelfde rechte** liggen (dit kunnen meer dan twee punten zijn), noemen we **collineaire punten**.
 
-![Punten zijn collineair als ze op dezelfde rechte liggen. Let op: een rechte mag je altijd doortrekken, dus punten die in het verlengde van de rechte liggen tellen ook mee.](img/collineaire_punten.png)
+<ToggleImage toggleText="Toon uitleg">
+
+![Collineaire punten](img/collineaire_punten_stripped.png)
+![Collieaire punten, met uitleg](img/collineaire_punten.png)
+
+</ToggleImage>
 
 De punten **A, B, C, D** zijn **collineair**. De punten **A, D en E** zijn bijvoorbeeld **niet collineair**. Merk ook op dat **elke groep van twee punten steeds collineair** is, aangezien twee punten steeds één rechte definiëren.
 
@@ -46,7 +50,12 @@ Vaak denken mensen bij het woord **richting** aan links of rechts. In de wiskund
 ## Wat is het verschil tussen een rechte en een lijnstuk?
 Een **lijnstuk** is, zoals doet vermoeden, een stuk van een lijn. 🤯 Meer bepaald: een lijn die **begrensd is door twee punten**. We **benoemen** het lijnstuk steeds naar zijn **grenspunten**. Dat zijn de **punten die het lijnstuk begrenzen**. Weet jij nu welke van volgende twee een lijnstuk is en welke een rechte <Mute text="of lijn"/>? 🤔
 
+<ToggleImage toggleText="Toon uitleg">
+
+![Een lijnstuk is een lijn die stopt in punten. We noteren dit met twee rechte haakjes, eentje rond elk grenspunt: [AB]. Een rechte loopt doorheen de punten, zoals eerder reeds vermeld. We noteren geen vierkante haakjes, maar gewoon AB.](img/lijnstuk_rechte_stripped.png)
 ![Een lijnstuk is een lijn die stopt in punten. We noteren dit met twee rechte haakjes, eentje rond elk grenspunt: [AB]. Een rechte loopt doorheen de punten, zoals eerder reeds vermeld. We noteren geen vierkante haakjes, maar gewoon AB.](img/lijnstuk_rechte.png)
+
+</ToggleImage>
 
 Naast rechten en lijnstukken, bestaan er ook nog **halfrechten**. Dit zijn rechten die **aan één kant begrensd** zijn en één **grenspunt** hebben. Zij lopen dus maar **langs één kant oneindig** door.
 
@@ -98,7 +107,12 @@ Een dubbele wederzijdse pijl ($\Leftrightarrow$) betekent **als en slechts als**
 
 In welke van de drie onderstaande situaties is M het midden van het lijnstuk [AB]? <Mute text="Druk op 'toon uitleg' voor de uitkomst."/>
 
+<ToggleImage toggleText="Toon uitleg">
+
+![Aan beide voorwaarden moet voldaan worden. De lengte tussen punt M en punten A en B moet gelijk zijn en M moet op het lijnstuk liggen (dezelfde drager).](img/definitie_midden_stripped.png)
 ![Aan beide voorwaarden moet voldaan worden. De lengte tussen punt M en punten A en B moet gelijk zijn en M moet op het lijnstuk liggen (dezelfde drager).](img/definitie_midden.png)
+
+</ToggleImage>
 
 Zie je, zo moeilijk zijn die definities niet! 💪💃🎉
 
