Use color shortcodes in mardown files

--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -64,22 +64,22 @@ Je ziet dat vermenigvuldigen met een macht van 10
 ervoor zorgt dat de **komma verschuift**.
 De komma verschuift **naar links bij negatieve machten** en ze verschuift **naar rechts bij positieve machten**.
 
-Vermenigvuldigingen met $10^{\orange{2}}$, bijvoorbeeld, verschuift de komma <span class="orange">2 plaatsen naar rechts</span>.
-Vermenigvuldigingen met $10^{\orange{-3}}$, verschuift de komma <span class="orange">3 plaatsen naar links</span>.
+Vermenigvuldigingen met $10^{\orange{2}}$, bijvoorbeeld, verschuift de komma <Orange>2 plaatsen naar rechts</Orange>.
+Vermenigvuldigingen met $10^{\orange{-3}}$, verschuift de komma <Orange>3 plaatsen naar links</Orange>.
 
 ## Getallen omzetten naar een macht van 10
 
 Nu zullen we zien hoe we aan die $\orange{10^{-9}}$ kwamen bij het voorbeeld
 van $0{,}00000000334 = 3{,}34\cdot \orange{10^{-9}}$.
 We willen de komma van $0{,}00000000334$ met
-**<span class="blue">9 plaatsen naar rechts</span>** verschuiven tot na de eerste
+**<Blue>9 plaatsen naar rechts</Blue>** verschuiven tot na de eerste
 
 3. Dat zouden we kunnen doen door te
-   **<span class="blue">vermenigvuldigen met $10^9$</span>**.
+   **<Blue>vermenigvuldigen met $10^9$</Blue>**.
    **Maar** we willen dat onze uitkomst
-   **<span class="orange">nog steeds gelijk is</span>** aan $0{,}00000000334$. Daarom
+   **<Orange>nog steeds gelijk is</Orange>** aan $0{,}00000000334$. Daarom
    moeten we ook terug
-   **<span class="orange">delen door $10^9$</span>**.
+   **<Orange>delen door $10^9$</Orange>**.
 
 $$
 \begin{aligned}
@@ -90,24 +90,24 @@ $$
 \end{aligned}
 $$
 
-Het **<span class="orange">delen door $10^9$</span>** komt neer op
-een **<span class="orange">vermenigvuldigen met $10^{-9}$</span>**. We kunnen dus ook
+Het **<Orange>delen door $10^9$</Orange>** komt neer op
+een **<Orange>vermenigvuldigen met $10^{-9}$</Orange>**. We kunnen dus ook
 zeggen dat we
-**<span class="blue">vermenigvuldigen met $10^9$</span>** om de komma
-**<span class="blue">9 plaatsen naar rechts</span>** te verschuiven en vervolgens
-**<span class="orange">vermenigvuldigen met $10^{-9}$</span>** om alles
-**<span class="orange">gelijk te houden</span>**.
+**<Blue>vermenigvuldigen met $10^9$</Blue>** om de komma
+**<Blue>9 plaatsen naar rechts</Blue>** te verschuiven en vervolgens
+**<Orange>vermenigvuldigen met $10^{-9}$</Orange>** om alles
+**<Orange>gelijk te houden</Orange>**.
 
 Een ander voorbeeld is dat we een heel groot getal korter willen schrijven. De
 afstand tussen de zon en de aarde, bijvoorbeeld, bedraagt ongeveer
 $149\ 600\ 000\ 000\ \si{m}$. Dit kunnen we korter schrijven door de komma
-**<span class="blue">11 plaatsen naar links</span>** te schuiven tot net na de 1.
+**<Blue>11 plaatsen naar links</Blue>** te schuiven tot net na de 1.
 Dat zouden we kunnen doen door te
-**<span class="blue">vermenigvuldigen met $10^{-11}$</span>**. **Maar** we willen
+**<Blue>vermenigvuldigen met $10^{-11}$</Blue>**. **Maar** we willen
 natuurlijk dat onze uitkomst
-**<span class="orange">nog steeds gelijk is</span>** aan $149\ 600\ 000\ 000$.
+**<Orange>nog steeds gelijk is</Orange>** aan $149\ 600\ 000\ 000$.
 Daarom moeten we ook terug delen door $10^{-11}$. Dat is echter hetzelfde als
-**<span class="orange">vermenigvuldigen met $10^{11}$</span>**.
+**<Orange>vermenigvuldigen met $10^{11}$</Orange>**.
 
 $$
 \begin{aligned}
@@ -126,9 +126,9 @@ Soms zullen we ook machten van 10 moeten omzetten naar andere machten van 10.
 We willen onze $3{,}34 \cdot 10^{-9}$ bijvoorbeeld omzetten naar
 $\orange{\ldots\text{iets}\ldots} \cdot \blue{10^{-11}}$. Om dat te doen,
 zullen we de $3{,}34 \cdot 10^{-9}$
-**<span class="blue">vermenigvuldigen met $10^{-11}$ om de juiste macht van 10 te hebben</span>**
+**<Blue>vermenigvuldigen met $10^{-11}$ om de juiste macht van 10 te hebben</Blue>**
 en vervolgens
-**<span class="orange">vermenigvuldigen met $10^{11}$ om het getal gelijk te houden</span>**.
+**<Orange>vermenigvuldigen met $10^{11}$ om het getal gelijk te houden</Orange>**.
 
 $$
 \begin{aligned}
@@ -144,9 +144,9 @@ $$
 <Attention title="Omzetten naar macht van 10">
 
 -   Als je de komma $N$ plaatsen **naar rechts** wilt opschuiven:
-    Vermenigvuldig met <span class="blue">$10^{N}$ om de komma op te schuiven</span> en met <span class="orange">$10^{-N}$ om het getal gelijk te houden</span>.
+    Vermenigvuldig met <Blue>$10^{N}$ om de komma op te schuiven</Blue> en met <Orange>$10^{-N}$ om het getal gelijk te houden</Orange>.
 -   Als je de komma $N$ plaatsen **naar links** wilt opschuiven:
-    Vermenigvuldig met <span class="blue">$10^{-N}$ om de komma op te schuiven</span> en met <span class="orange">$10^N$ om het getal gelijk te houden</span>.
+    Vermenigvuldig met <Blue>$10^{-N}$ om de komma op te schuiven</Blue> en met <Orange>$10^N$ om het getal gelijk te houden</Orange>.
 
 </Attention>
 
