--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -46,15 +46,15 @@ ondoorschijnende zwarte bol en een scherm met drie gebieden: **A**, **B**, en
 
 ![](img/puntbron_straal_schaduwen.png)
 
-Je ziet dat er in **<span class="green">gebied A</span>** evenveel lichtstralen
-geraken als in **<span class="green">gebied B</span>**. Gebieden **<span class="green">A en B</span>** zijn dus even fel belicht. In
-**<span class="dark-red">gebied C</span>** geraken **geen lichtstralen** omdat de
+Je ziet dat er in **<Green>gebied A</Green>** evenveel lichtstralen
+geraken als in **<Green>gebied B</Green>**. Gebieden **<Green>A en B</Green>** zijn dus even fel belicht. In
+**<DarkRed>gebied C</DarkRed>** geraken **geen lichtstralen** omdat de
 ondoorschijnende bol in de weg staat.
-**<span class="dark-red">Gebied C</span>** wordt dus minder belicht dan gebieden
-**<span class="green">A en B</span>**. **<span class="dark-red">Gebied C</span>** zal
+**<DarkRed>Gebied C</DarkRed>** wordt dus minder belicht dan gebieden
+**<Green>A en B</Green>**. **<DarkRed>Gebied C</DarkRed>** zal
 daarom **donkerder** zijn dan gebieden
-**<span class="green">A en B</span>**. We zien in
-**<span class="dark-red">gebied C</span>** een **schaduw**:
+**<Green>A en B</Green>**. We zien in
+**<DarkRed>gebied C</DarkRed>** een **schaduw**:
 
 ![](img/puntbron_straal_schaduwen_resultaat.png)
 
