--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -44,7 +44,7 @@ De [grafiek](../functies/grafiek) van deze functies ziet er als volgt uit:
 
 <Bokeh plot="plt/snijpunt" />
 
-Het oranje punt duidt het <span class="orange">snijpunt</span> aan van de twee functies. Hoe kunnen we de coördinaten van dit snijpunt vinden?
+Het oranje punt duidt het <Orange>snijpunt</Orange> aan van de twee functies. Hoe kunnen we de coördinaten van dit snijpunt vinden?
 
 Een snijpunt is een punt dat zowel op de grafiek van $\green{f}$ als op de grafiek van $\blue{g}$ ligt. Denkend aan onze analogie van [het machientje](../functies/intro#een-functie-is-een-machientje), is de $x-$waarde van een snijpunt een **ingang die voor zowel $\green{f}$ als $\blue{g}$ dezelfde uitgang geeft**.
 
@@ -119,7 +119,7 @@ Op de grafiek bovenaan zien we dat dit punt inderdaad overeenkomt met het snijpu
 
 ## Nulpunten zoeken van functies
 
-Als we een <span class="orange">nulwaarde</span> van een functie in die functie stoppen, komt er $0$ uit de functie.
+Als we een <Orange>nulwaarde</Orange> van een functie in die functie stoppen, komt er $0$ uit de functie.
 
 ![](img/conveyor_nulpunt_1.png)
 
@@ -130,7 +130,7 @@ $$
 $$
 
 
-En we krijgen een vergelijking! Wanneer we deze oplossen, vinden we de <span class="orange">nulwaarde</span> van de functie.
+En we krijgen een vergelijking! Wanneer we deze oplossen, vinden we de <Orange>nulwaarde</Orange> van de functie.
 
 $$
 \begin{aligned}
