--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -114,8 +114,8 @@ $\orange{1} + \blue{3} = 4$.
 
 We kunnen ook de graad opdelen **per variabele**. De eenterm
 $-4x^\orange{2}y^\blue{3}$, bijvoorbeeld, is van de
-**<span class="orange">tweede graad in $x$</span>** en van de
-**<span class="blue">derde graad in $y$</span>**.
+**<Orange>tweede graad in $x$</Orange>** en van de
+**<Blue>derde graad in $y$</Blue>**.
 
 | Eenterm                              | Graad per variabele                                      |
 | ------------------------------------ | -------------------------------------------------------- |
