--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -119,7 +119,7 @@ dan dat $\green{dom f = [-5; +\infty[}$.
 Het **beeld** <Mute>(of het bereik)</Mute> van diezelfde functie kunnen we
 vinden door de grafiek nu te **projecteren op de y-as**. Op de onderstaande
 grafiek zie je het resultaat van deze projectie
-**<span class="green">in het groen op de y-as</span>**.
+**<Green>in het groen op de y-as</Green>**.
 
 <Bokeh plot="plt/bld" />
 
