--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -29,11 +29,11 @@ text="(of de y-waarden)" /> _positief_, _negatief_ of _nul_ zijn.
 
 We zien op de grafiek:
 
--   Voor x-waarden kleiner dan $-3$ zijn alle y-waarden **<span class="red">negatief</span>**;
--   Voor x gelijk aan $-3$ is de y-waarde **<span class="blue">nul</span>**;
--   Voor x-waarden tussen $-3$ en $3$ zijn alle y-waarden **<span class="green">positief</span>**;
--   Voor x gelijk aan $3$ is de y-waarde **<span class="blue">nul</span>**;
--   Voor x-waarden groter dan $3$ zijn alle y-waarden **<span class="red">negatief</span>**.
+-   Voor x-waarden kleiner dan $-3$ zijn alle y-waarden **<Red>negatief</Red>**;
+-   Voor x gelijk aan $-3$ is de y-waarde **<Blue>nul</Blue>**;
+-   Voor x-waarden tussen $-3$ en $3$ zijn alle y-waarden **<Green>positief</Green>**;
+-   Voor x gelijk aan $3$ is de y-waarde **<Blue>nul</Blue>**;
+-   Voor x-waarden groter dan $3$ zijn alle y-waarden **<Red>negatief</Red>**.
 
 Dit vatten we als volgt samen in een **tekenschema**:
 
@@ -43,11 +43,11 @@ Dit vatten we als volgt samen in een **tekenschema**:
 
 Het schema toont:
 
--   Als de ingang ($x$) iets tussen $-\infty$ en $-3$ is, is de uitgang ($y$) _<span class="red">negatief</span>_;
--   Als $x=-3$, is $y$ _<span class="blue">nul</span>_;
--   Als $x$ iets tussen $-3$ en $3$ is, is $y$ _<span class="green">positief</span>_;
--   Als $x=3$ is, is $y$ _<span class="blue">nul</span>_;
--   Als $x$ iets tussen $3$ en $+\infty$ is, is $y$ _<span class="red">negatief</span>_.
+-   Als de ingang ($x$) iets tussen $-\infty$ en $-3$ is, is de uitgang ($y$) _<Red>negatief</Red>_;
+-   Als $x=-3$, is $y$ _<Blue>nul</Blue>_;
+-   Als $x$ iets tussen $-3$ en $3$ is, is $y$ _<Green>positief</Green>_;
+-   Als $x=3$ is, is $y$ _<Blue>nul</Blue>_;
+-   Als $x$ iets tussen $3$ en $+\infty$ is, is $y$ _<Red>negatief</Red>_.
 
 ## Tekenschema zonder grafiek
 
@@ -131,7 +131,7 @@ $$
 f(\orange{0}) = -(\orange{0})^2 + 9 = \green{9}
 $$
 
-We komen een **<span class="green">positief</span>** getal uit, dus we zetten een $\green{+}$ tussen $-3$ en $3$:
+We komen een **<Green>positief</Green>** getal uit, dus we zetten een $\green{+}$ tussen $-3$ en $3$:
 
 | Ingang $x$             | $-\infty$ |     | $-3$       |             | $3$        |     | $+\infty$ |
 | ---------------------- | --------- | --- | ---------- | ----------- | ---------- | --- | --------- |
@@ -143,7 +143,7 @@ $$
 f(\orange{-5}) = -(\orange{-5})^2 + 9 = -25 + 9 = \red{-16}
 $$
 
-Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten een $\red{-}$ tussen $-\infty$ en $-3$:
+Invullen geeft een **<Red>negatief</Red>** getal, dus we zetten een $\red{-}$ tussen $-\infty$ en $-3$:
 
 | Ingang $x$             | $-\infty$ |           | $-3$       |             | $3$        |     | $+\infty$ |
 | ---------------------- | --------- | --------- | ---------- | ----------- | ---------- | --- | --------- |
@@ -155,7 +155,7 @@ $$
 f(\orange{5}) = -(\orange{5})^2 + 9 = -25 + 9 =
 \red{-16}
 $$
- Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten een $\red{-}$ tussen $3$ en
+ Invullen geeft een **<Red>negatief</Red>** getal, dus we zetten een $\red{-}$ tussen $3$ en
 $+\infty$:
 
 | Ingang $x$             | $-\infty$ |           | $-3$       |             | $3$        |           | $+\infty$ |
