--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -49,20 +49,20 @@ Met **benaderingsregels** kunnen we de onzekerheid van een berekening
 uitdrukken. Als we de benaderingsregels toepassen die we straks zullen leren,
 krijgen we $1{,}6 \si{ m}$ voor de eerste berekening en $1{,}58 \si{ m}$ voor
 de tweede berekening. Het belangrijke hierbij is dat er $1{,}6$ staat en
-**<span class="red">niet</span>** $1{,}6\red{0}$.
+**<Red>niet</Red>** $1{,}6\red{0}$.
 
 Met $1{,}6 \si{ m}$ bedoelen we namelijk: "Iets tussen $1{,}55 \si{ m}$ en
 $1{,}65 \si{ m}$," en inderdaad, $1{,}58 \si{ m}$
-**<span class="green">ligt binnen die foutenmarge</span>**.
+**<Green>ligt binnen die foutenmarge</Green>**.
 
 ![](img/lego_100_correct_margin.png)
 
 Als we bij de eerste berekening $1{,}6\red{0}$ hadden geschreven, zou dat
 betekenen: "Iets tussen $1{,}5\red{95} \si{ m}$ en $1{,}6\red{05} \si{ m}$,"
 maar
-**<span class="red">dat is fout</span>**,
+**<Red>dat is fout</Red>**,
 want $1{,}58 \si{ m}$
-**<span class="red">ligt buiten die foutenmarge</span>**.
+**<Red>ligt buiten die foutenmarge</Red>**.
 
 ![](img/lego_100_wrong_margin.png)
 
