Check grootheden_eenheden

--- a/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
@@ -2,19 +2,11 @@
 title: "Beduidende cijfers"
 date: 2019-02-06T18:36:58+01:00
 weight: 5
-draft: false
 tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images: []
-title_img: ""
 ---
 
 De beduidende cijfers zijn de cijfers in een getal **vanaf het eerste cijfer 
-dat verschillend is van nul**. Ze zijn hieronder aangeduid in het <span 
-class="orange">oranje</span>:
+dat verschillend is van nul**. Ze zijn hieronder aangeduid in het <Orange>oranje</Orange>:
 
 
 $$
@@ -44,7 +36,7 @@ $$
 
 ## Aantal beduidende cijfers
 
-Bij [benaderingsregels](../benaderingsregels) zullen we soms het aantal beduidende cijfers moeten tellen. Eens we de beduidende cijfers van een getal kunnen aanduiden, tellen we gewoon hoeveel er zijn, en dat geeft ons het **aantal beduidende cijfers**.
+Bij [benaderingsregels](benaderingsregels) zullen we soms het aantal beduidende cijfers moeten tellen. Eens we de beduidende cijfers van een getal kunnen aanduiden, tellen we gewoon hoeveel er zijn, en dat geeft ons het **aantal beduidende cijfers**.
 
 | Getal                 | Beduidende cijfers | Aantal beduidende cijfers |
 | --------------------- | ------------------ | ------------------------- |
