--- a/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
@@ -2,14 +2,8 @@
 title: "Wat zijn grootheden en eenheden?"
 date: 2019-01-28T08:04:59+01:00
 weight: 1
-draft: false
-tags: ["grootheden_eenheden", "SI-eenheid"]
-categories: ["grootheden_eenheden", "SI-eenheid"]
-level: "3M"
-course: "Fysica"
-topic: "grootheden_eenheden"
-images: []
-title_img: ""
+tags: ["grootheid", "eenheid", "SI-eenheid"]
+description: "Hier leggen we uit wat grootheden en eenheden juist zijn en wat het verschil is tussen beide. We vertellen ook over de eenheden die we best gebruiken, namelijk de SI-eenheden."
 ---
 
 We gebruiken **eenheden** om **grootheden** te beschrijven. Zo gebruiken we
