--- a/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
@@ -1,15 +1,9 @@
 ---
-title: "Prefixen"
+title: "Prefixen of voorvoegsels"
 date: 2019-01-28T08:05:35+01:00
 weight: 3
-draft: false
-tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images: []
-title_img: ""
+tags: ["prefix", "voorvoegsel", "prefix omzetten", "kilometer naar meter", "gram naar kilogram"]
+description: "In deze les leggen we uit wat prefixen of voorvoegsels zijn en hoe je van en naar prefixen kan omzetten."
 ---
 
 We kunnen grootheden zoals _lengte_ beschrijven met eenheden zoals _meter_. In een vorige les zagen we dat elke [grootheid een officiële SI-eenheid heeft](intro#si-eenheden-maken-duidelijke-afspraken). De officiële eenheid van _tijd_ is bijvoorbeeld de seconde.
@@ -29,18 +23,18 @@ Elke prefix komt overeen met een macht van 10. Hieronder vind je een tabel met d
 
 | Symbool   | Naam  | Macht van 10 |
 | --------- | ----- | ------------ |
-| $\si{T}$  | Tera  | $10^{12}   $ |
-| $\si{G}$  | Giga  | $10^9    $   |
-| $\si{M}$  | Mega  | $10^6    $   |
-| $\si{k}$  | kilo  | $10^3    $   |
-| $\si{h}$  | hecto | $10^2    $   |
-| $\si{da}$ | deca  | $10^1    $   |
-|           |       | $        $   |
-| $\si{d}$  | deci  | $10^{-1} $   |
-| $\si{c}$  | centi | $10^{-2} $   |
-| $\si{m}$  | milli | $10^{-3} $   |
-| $\mu$     | micro | $10^{-6} $   |
-| $\si{n}$  | nano  | $10^{-9} $   |
+| $\si{T}$  | Tera  | $10^{12}$ |
+| $\si{G}$  | Giga  | $10^9$   |
+| $\si{M}$  | Mega  | $10^6$   |
+| $\si{k}$  | kilo  | $10^3$   |
+| $\si{h}$  | hecto | $10^2$   |
+| $\si{da}$ | deca  | $10^1$   |
+|           |       |    |
+| $\si{d}$  | deci  | $10^{-1}$   |
+| $\si{c}$  | centi | $10^{-2}$   |
+| $\si{m}$  | milli | $10^{-3}$   |
+| $\mu$     | micro | $10^{-6}$   |
+| $\si{n}$  | nano  | $10^{-9}$   |
 | $\si{p}$  | pico  | $10^{-12}$   |
 
 Deze tabel **moet je uit je hoofd kennen**... Je moet voor elke prefix weten
@@ -50,7 +44,7 @@ welke prefix ermee overeenkomt. Je moet dus bijvoorbeeld weten dat je $-0{,}53
 \si{ N}$. En dat je $184 \cdot \orange{10^{-12}} \si{ m}$ kan schrijven als
 $184 \orange{\si{ p}} \si{m}$.
 
-## Prefixen wegwerken
+## Een prefix omzetten naar een macht van 10
 
 Voor grote afstanden maken we vaak gebruik van de kilometer ($\si{km}$). De [SI-eenheid](intro#si-eenheden-maken-duidelijke-afspraken) van afstand is echter de meter ($\si{m}$). We moeten daarom vaak $\si{km}$ omzetten naar $\si{m}$. In de tabel hierboven zien we dat die $\si{k}$ hetzelfde is als $10^{3}$. Voor het omzetten van $\si{km}$ naar $\si{m}$ moet je dan gewoon de $\si{k}$ vervangen door $10^{3}$.
 
@@ -63,45 +57,59 @@ $$
 \end{aligned}
 $$
 
-## Prefixen toevoegen
+## Een prefix toevoegen aan een eenheid
 
 De [SI-eenheid](intro#si-eenheden-maken-duidelijke-afspraken) van massa is de kilogram ($\si{kg}$). Vaak wordt een massa echter ook uitgedrukt in gram ($\si{g}$). Als we een massa in $\si{g}$ moeten omzetten naar de SI-eenheid $\si{kg}$, zullen we dus een prefix moeten _toevoegen_. Omdat elke prefix een macht van 10 voorstelt, is het toevoegen van een prefix hetzelfde als het toevoegen van een macht van 10. In het geval van $\si{g}$ omzetten naar $\si{kg}$, moeten we een $\si{k}$ toevoegen of dus $10^3$. In de [les over machten van 10](machten_van_10#machten-van-10-omzetten) zagen we hoe we zo'n $10^3$ konden toevoegen zonder de waarde van een getal te veranderen.
+
+Het komt erop neer dat we zowel $\cdot 10^3$ als $\cdot 10^{-3}$ achter ons getal gaan schrijven. De $\cdot 10^3$ vervangen we dan door de prefix $\si{k}$ en de $\cdot 10^{-3}$ rekenen we uit.
 
 Bijvoorbeeld: voor een bepaald recept heb je $250 \si{ g}$ bloem nodig. Zet dit om naar de juiste SI-eenheid.
 
 $$
 \begin{aligned}
 250\si{ g}
-&= 250 \cdot \orange{10^{-3}} \cdot \blue{10^3} \si{ g}\\
-&= 250 \cdot \orange{10^{-3}} \blue{\si{ k}} \si{g}\\
+&= 250 \cdot \orange{10^{-3}} \cdot \underbrace{\blue{10^3} \si{ g}}_{= \si{kg}}\\
+&= \underbrace{250 \cdot \orange{10^{-3}}}_{= 0{,}250} \blue{\si{ k}} \si{g}\\
 &= \orange{0{,}250} \blue{\si{ k}} \si{g}\\
 \end{aligned}
 $$
 
-## Prefixen omzetten
+## Een prefix omzetten naar een andere prefix
 
 Eens je weet welke prefix overeenkomt met welke macht van 10 (en omgekeerd), is het omzetten van prefixen hetzelfde als het [omzetten van machten van 10](machten_van_10#machten-van-10-omzetten).
 Het enige wat je extra moet doen is het omzetten van prefixen naar machten van 10 en terug.
 
 Stel dat we $5{,}2 \green{\si{ k}}\si{m}$ willen omzetten naar $\blue{\si{d}}\si{m}$. Dat kan je doen als volgt:
 
-1. Zet alle prefixen om naar een macht van 10. De opgave wordt dan:
-   "Zet $5{,}2 \cdot \green{10^{3}} \si{ m}$ om naar $\ldots\text{iets}\ldots\cdot \blue{10^{-1}}\si{ m}$"
-2. Los op volgens de methode van het [omzetten van machten van 10](machten_van_10#machten-van-10-omzetten)
+1. Zet alle prefixen om naar hun bijhorende macht van 10. De opgave
+    $$
+    \text{Zet $5{,}2 \green{\si{ k}}\si{m}$ om naar $\blue{\si{d}}\si{m}$}
+    $$
+    wordt dan:
+    $$
+    \text{Zet $5{,}2 \cdot \green{10^{3}} \si{ m}$ om naar $\cdot \blue{10^{-1}}\si{ m}$}
+    $$
+2. Vermenigvuldig het getal in de opgave (hier: $5{,}2 \cdot 10^3$) met de gevraagde macht van $10$ (hier: $\blue{10^{-1}}$), én met het **omgekeerde** van die macht van $10$ (hier: $\orange{10^{1}}$):
    $$
    \begin{aligned}
-   5{,}2 \cdot \green{10^{3}} \si{ m}
-   &= 5{,}2 \cdot \green{10^{3}} \cdot \orange{10^1} \cdot \blue{10^{-1}}\si{ m}\\
-   &= 5{,}2\cdot 10^{\green{3} + \orange{1}} \cdot \blue{10^{-1}} \si{ m}\\
-   &= 5{,}2\cdot 10^4 \cdot \blue{10^{-1}}\si{ m}
+   5{,}2 \cdot 10^{3} \si{ m}
+   &= 5{,}2 \cdot 10^{3} \cdot \orange{10^1} \cdot \blue{10^{-1}}\si{ m}
    \end{aligned}
    $$
-3. Vervang de bijhorende macht van 10 terug door de prefix:
-   
-$$
-5{,}2\cdot 10^4 \cdot \blue{\si{d}}\si{m}
-$$
-
+3. Reken alle machten van $10$ uit, **behalve de gevraagde macht**:
+    $$
+    \begin{aligned}
+    &= 5{,}2 \cdot \underbrace{10^{3} \cdot \orange{10^1}}_{= 10^4} \cdot \blue{10^{-1}}\si{ m} \\
+    &= 5{,}2\cdot 10^4 \cdot \blue{10^{-1}}\si{ m}
+    \end{aligned}
+    $$
+4. Vervang de gevraagde macht van 10 terug door de prefix:
+    $$
+    \begin{aligned}
+    &= 5{,}2\cdot 10^4 \cdot \underbrace{\blue{10^{-1}}\si{ m}}_{= \si{dm}} \\
+    &= 5{,}2\cdot 10^4 \cdot \blue{\si{d}}\si{m} 
+    \end{aligned}
+    $$
 
 ## Kubieke- en vierkante-
 
