--- a/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
@@ -2,13 +2,8 @@
 title: "Eenheden omzetten"
 date: 2019-02-08T07:53:47+01:00
 weight: 4
-draft: false
-tags: []
-categories: []
-level: ""
-course: ""
-topic: ""
-images: ["/lessen/fysica/grootheden_eenheden/eenheden_omzetten/img/liter_conversion.png"]
+tags: ["kilometer per uur naar meter per seconde", "uur naar seconde", "eenheden omzetten"]
+description: "In deze les leggen we uit hoe je eenheden kan omzetten, zoals bijvoorbeeld uur naar seconde of meter per seconde naar kilometer per uur en omgekeerd."
 image: img/liter_conversion.png
 ---
 
@@ -22,9 +17,24 @@ Er zijn dus verschillende situaties waarbij we eenheden zullen moeten omzetten. 
 
 In de les over [prefixen](prefixen) zagen we al hoe we eenheden konden omzetten waarvan enkel de prefix verschilde. Hierin zijn drie gevallen te onderscheiden:
 
-1. Het [wegwerken van een prefix](prefixen#prefixen-wegwerken), zoals van $\si{km}$ naar $\si{m}$;
-2. Het [toevoegen van een prefix](prefixen#prefixen-toevoegen), zoals van $\si{g}$ naar $\si{kg}$;
-3. Het [omzetten van een prefix](prefixen#prefixen-omzetten), zoals van $\si{mg}$ naar $\si{kg}$.
+1. Het [omzetten van een prefix naar een macht van $10$](prefixen#een-prefix-omzetten-naar-een-macht-van-10), zoals van $\si{km}$ naar $\cdot 10^3~\si{m}$. Dat doen we door **de prefix te vervangen door de bijhorende macht van $10$**. Daarvoor is het belangrijk dat je de [tabel met prefixen](prefixen#de-belangrijkste-prefixen) uit je hoofd kent.
+2. Het [toevoegen van een prefix aan een eenheid](prefixen#een-prefix-toevoegen-aan-een-eenheid), zoals van $\si{s}$ naar $\si{ms}$. Dat doen we door te vermenigvuldigen met <Blue>de macht van $10$ die hoort bij de prefix</Blue> én te vermenigvuldigen met <Orange>het **omgekeerde van die macht**</Orange>. $5{,}0~\si{s}$ omzetten naar $\si{ms}$, bijvoorbeeld, gaat zo:
+$$
+\begin{aligned}
+5{,}0~\si{s} &= 5{,}0\cdot \orange{10^3}\cdot \underbrace{\blue{10^{-3}} ~\si{s}}_{= \si{ms}}\\
+&= 5{,}0\cdot \orange{10^3}~\blue{\si{ms}}
+\end{aligned}
+$$
+3. Het [omzetten van een prefix naar een andere prefix](prefixen#een-prefix-omzetten-naar-een-andere-prefix), zoals van $\si{kW}$ naar $\si{GW}$. Daarvoor zetten we eerst beide prefixen om naar de bijhorende macht van $10$. Vervolgens vermenigvuldigen we het getal in de opgave met <Blue>de gevraagde macht van $10$</Blue> én met <Orange>het **omgekeerde** van die macht van $10$</Orange>. Ten slotte rekenen we alle machten van $10$ uit, behalve de gevraagde macht. De gevraagde macht kunnen we dan gewoon vervangen door de gevraagde prefix. Stel bijvoorbeeld dat we $300~\si{\green{k}W}$ moeten omzetten naar $\si{\blue{G}W}$. Dat is hetzelfde als $300\cdot\green{10^3}~\si{W}$ omzetten naar $\cdot\blue{10^9}~\si{W}$:
+$$
+\begin{aligned}
+300\cdot 10^3~\si{W} &= 300\cdot \underbrace{10^3\cdot\orange{10^{-9}}}_{= 10^{-6}} \cdot\blue{10^9}~\si{W}\\
+&= 300\cdot10^{-6}\cdot\underbrace{\blue{10^9}~\si{W}}_{= \si{GW}}\\
+&= 300\cdot10^{-6}~\si{\blue{G}W}\\
+\end{aligned}
+$$
+
+Als je nog niet zo vertrouwd bent met het toevoegen, omzetten of wegwerken van prefixen, lees dan zeker de [les over prefixen](prefixen) nog eens na.
 
 ## Tijden omzetten
 
@@ -56,22 +66,22 @@ Merk op: we maken gebruik van de [benaderingsregels](benaderingsregels) in de ko
 
 | Van      | Naar       | Afleiding                                                                                                                     | Kort gezegd                | Voorbeeld                                                                                                                            |
 | -------- | ---------- | ----------------------------------------------------------------------------------------------------------------------------- | -------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ |
-| $\si{h}$ | $\si{min}$ | /                                                                                                                             | $1 \si{ h} = 60 \si{ min}$ | $$\begin{aligned}8{,}00 \orange{\si{ h}} &= 8{,}00 \cdot \orange{60 \si{ min}}\\ &= 480 \orange{\si{ min}} \end{aligned} $$          |
-| $\si{h}$ | $\si{s}$   | $$\begin{aligned}1 \si{ h} &= 60 \orange{\si{ min}}\\ &= 60 \cdot \orange{60 \si{ s}}\\ &= 3600 \orange{\si{ s}}\end{aligned} $$ | $1 \si{ h} = 3600 \si{ s}$ | $$\begin{aligned}8{,}00 \orange{\si{ h}} &= 8{,}00 \cdot \orange{3600 \si{ s}} \\ &= 28{,}8 \cdot 10^{3} \orange{\si{ s}} \end{aligned} $$ |
+| uur ($\si{h}$) | minuten ($\si{min}$) | /                                                                                                                             | $1 \si{ h} = 60 \si{ min}$ | $$\begin{aligned}8{,}00~\orange{\si{h}} &= 8{,}00 \cdot \orange{60~\si{min}}\\ &= 480~\orange{\si{min}} \end{aligned}$$          |
+| uur ($\si{h}$) | seconden ($\si{s}$)   | $$\begin{aligned}1 \si{ h} &= 60~\underbrace{\orange{\si{min}}}_{= 60~\si{s}}\\ &= \underbrace{60 \cdot \orange{60}}_{= 3600} ~\orange{\si{s}}\\ &= 3600~\orange{\si{s}}\end{aligned}$$ | $1 \si{ h} = 3600 \si{ s}$ | $$\begin{aligned}8{,}00\orange{\si{h}}}_{= 3600~\si{s}} &= 8{,}00 \cdot~\orange{3600 \si{s}} \\ &= 28{,}8 \cdot 10^{3}~\orange{\si{s}} \end{aligned}$$ |
 
 ### Van minuut naar...
 
 | Van        | Naar     | Afleiding                                                                                                                                                                                                                                                                              | Kort gezegd                          | Voorbeeld                                                                                                                                                                   |
 | ---------- | -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| $\si{min}$ | $\si{h}$ | $$\begin{aligned}1 \si{ h} &= 60 \si{ min}\\ &\Updownarrow\\ \frac{1 \si{ h}}{\orange{60}} &= \frac{60 \si{ min}}{\orange{60}}\\ &\Updownarrow\\ \frac{1}{\orange{60}} \si{ h} &= 1 \si{ min} \\ &\Updownarrow\\ 1 \si{ min} &= \frac{1}{\orange{60}} \si{ h}\end{aligned} $$ | $1 \si{ min} = \frac{1}{60} \si{ h}$ | $$\begin{aligned}90{,}0 \orange{\si{ min}} &= 90{,}0 \cdot \orange{\frac{1}{60} \si{ h}}\\ &= \frac{90{,}0}{60} \orange{\si{ h}}\\ &= 1{,}50 \orange{\si{ h}} \end{aligned} $$ |
-| $\si{min}$ | $\si{s}$ | /                                                                                                                                                                                                                                                                                      | $1 \si{ min} = 60 \si{ s}$           | $$\begin{aligned}90{,}0 \orange{\si{ min}} &= 90{,}0 \cdot \orange{60 \si{ s}} \\ &= 5{,}40 \cdot 10^{3} \orange{\si{ s}} \end{aligned} $$                                        |
+| minuten ($\si{min}$) | uur ($\si{h}$) | $$\begin{aligned}1 \si{ h} &= 60 \si{ min}\\ &\Updownarrow\\ \frac{1 \si{ h}}{\orange{60}} &= \frac{60 \si{ min}}{\orange{60}}\\ &\Updownarrow\\ \frac{1}{\orange{60}} \si{ h} &= 1 \si{ min} \\ &\Updownarrow\\ 1 \si{ min} &= \frac{1}{\orange{60}} \si{ h}\end{aligned}$$ | $1 \si{ min} = \frac{1}{60} \si{ h}$ | $$\begin{aligned}90{,}0 \orange{\si{ min}} &= 90{,}0 \cdot \orange{\frac{1}{60} \si{ h}}\\ &= \frac{90{,}0}{60} \orange{\si{ h}}\\ &= 1{,}50 \orange{\si{ h}} \end{aligned}$$ |
+| minuten ($\si{min}$) | seconden ($\si{s}$) | /                                                                                                                                                                                                                                                                                      | $1 \si{ min} = 60 \si{ s}$           | $$\begin{aligned}90{,}0 \orange{\si{ min}} &= 90{,}0 \cdot \orange{60 \si{ s}} \\ &= 5{,}40 \cdot 10^{3} \orange{\si{ s}} \end{aligned}$$                                        |
 
 ### Van seconde naar...
 
 | Van      | Naar       | Afleiding                                                                                                                                                                                                                                                                              | Kort gezegd                          | Voorbeeld                                                                                                                                                                                  |
 | -------- | ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| $\si{s}$ | $\si{min}$ | $$\begin{aligned}1 \si{ min} &= 60 \si{ s}\\ &\Updownarrow\\ \frac{1 \si{ min}}{\orange{60}} &= \frac{60 \si{ s}}{\orange{60}}\\ &\Updownarrow\\ \frac{1}{\orange{60}} \si{ min} &= 1 \si{ s} \\ &\Updownarrow\\ 1 \si{ s} &= \frac{1}{\orange{60}} \si{ min}\end{aligned} $$ | $1 \si{ s} = \frac{1}{60} \si{ min}$ | $$\begin{aligned}30{,}0 \orange{\si{ s}} &= 30{,}0 \cdot \orange{\frac{1}{60} \si{ min}}\\ &= \frac{30{,}0}{60} \orange{\si{ min}}\\ &= 0{,}500 \orange{\si{ min}} \end{aligned} $$           |
-| $\si{s}$ | $\si{h}$   | $$\begin{aligned}1 \si{ s} &= \frac{1}{60}\orange{\si{ min}} \\ &=\frac{1}{60}\cdot \orange{\frac{1}{60}\si{ h}}\\ &=\frac{1}{\orange{3600}}\si{ h} \end{aligned} $$                                                                                                                      | $1 \si{ s} = \frac{1}{3600} \si{ h}$ | $$\begin{aligned}30{,}0 \orange{\si{ s}} &= 30{,}0 \cdot \orange{\frac{1}{3600} \si{ h}}\\ &= \frac{30{,}0}{3600} \orange{\si{ h}}\\ &= 8{,}33\cdot 10^{-3} \orange{\si{ h}} \end{aligned} $$ |
+| seconden ($\si{s}$) | minuten ($\si{min}$) | $$\begin{aligned}1 \si{ min} &= 60 \si{ s}\\ &\Updownarrow\\ \frac{1 \si{ min}}{\orange{60}} &= \frac{60 \si{ s}}{\orange{60}}\\ &\Updownarrow\\ \frac{1}{\orange{60}} \si{ min} &= 1 \si{ s} \\ &\Updownarrow\\ 1 \si{ s} &= \frac{1}{\orange{60}} \si{ min}\end{aligned}$$ | $1 \si{ s} = \frac{1}{60} \si{ min}$ | $$\begin{aligned}30{,}0 \orange{\si{ s}} &= 30{,}0 \cdot \orange{\frac{1}{60} \si{ min}}\\ &= \frac{30{,}0}{60} \orange{\si{ min}}\\ &= 0{,}500 \orange{\si{ min}} \end{aligned}$$           |
+| seconden ($\si{s}$) | uur ($\si{h}$)   | $$\begin{aligned}1 \si{ s} &= \frac{1}{60}\orange{\si{ min}} \\ &=\frac{1}{60}\cdot \orange{\frac{1}{60}\si{ h}}\\ &=\frac{1}{\orange{3600}}\si{ h} \end{aligned}$$                                                                                                                      | $1 \si{ s} = \frac{1}{3600} \si{ h}$ | $$\begin{aligned}30{,}0 \orange{\si{ s}} &= 30{,}0 \cdot \orange{\frac{1}{3600} \si{ h}}\\ &= \frac{30{,}0}{3600} \orange{\si{ h}}\\ &= 8{,}33\cdot 10^{-3} \orange{\si{ h}} \end{aligned}$$ |
 
 ## Snelheden omzetten
 
@@ -81,15 +91,15 @@ naar $\si{m}/\si{s}$ en omgekeerd. Hieronder weer een samenvattende tabel.
 
 | Van              | Naar             | Afleiding                                                                                                                                                                                                                                                                                                                                               | Kort gezegd                                         | Voorbeeld                                                                                                                                                                                                      |
 | ---------------- | ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| $\si{km}/\si{h}$ | $\si{m}/\si{s}$  | $$\begin{aligned} 1 \frac{\blue{\si{k}}\si{m}}{\orange{\si{h}}} &= 1 \cdot \frac{\blue{10^3}\si{ m}}{\orange{3600\si{ s}}}\\ &= \frac{1\cdot \blue{10^3}} {\orange{3600}} \frac{\si{m}}{\si{s}}\\ &= \frac{1}{3{,}6} \frac{\si{m}}{\si{s}} \end{aligned} $$                                                                                                | $1 \si{ km}/\si{h} = \frac{1}{3{,}6} \si{m}/\si{s}$ | $$\begin{aligned} 30{,}0 \orange{\si{ km}/\si{h}} &= 30{,}0 \cdot \orange{\frac{1}{3{,}6} \si{ m}/\si{s}} \\ &= \frac{30{,}0}{\orange{3{,}6}} \orange{\si{ m}/\si{s}} \\ &= 8{,}33 \si{ m}/\si{s}\end{aligned} $$ |
-| $\si{m}/\si{s}$  | $\si{km}/\si{h}$ | $$\begin{aligned} 1 \si{ km}/\si{h} &= \frac{1}{3{,}6} \si{ m}/\si{s}\\ &\Updownarrow\\ \orange{3{,}6}\cdot 1 \si{ km}/\si{h} &= \orange{3{,}6}\cdot \frac{1}{3{,}6} \si{ m}/\si{s}\\ &\Updownarrow\\ \orange{3{,}6} \si{ km}/\si{h} &= 1 \si{ m}/\si{s}\\ &\Updownarrow\\ 1 \si{ m}/\si{s} &= \orange{3{,}6} \si{ km}/\si{h} \end{aligned} $$ | $1 \si{ m}/\si{s} = 3{,}6 \si{ km}/\si{h}$          | $$\begin{aligned} 25{,}0 \orange{\si{ m}/\si{s}} &= 25{,}0 \cdot \orange{3{,}6 \si{ km}/\si{h}} \\ &= 90{,}0 \si{ km}/\si{h} \end{aligned} $$                                                                        |
+| kilometer per uur ($\si{km}/\si{h}$) | meter per seconde ($\si{m}/\si{s}$)  | $$\begin{aligned} 1 \frac{\blue{\si{k}}\si{m}}{\orange{\si{h}}} &= 1 \cdot \frac{\blue{10^3}\si{ m}}{\orange{3600\si{ s}}}\\ &= \frac{1\cdot \blue{10^3}} {\orange{3600}} \frac{\si{m}}{\si{s}}\\ &= \frac{1}{3{,}6} \frac{\si{m}}{\si{s}} \end{aligned}$$                                                                                                | $1 \si{ km}/\si{h} = \frac{1}{3{,}6} \si{m}/\si{s}$ | $$\begin{aligned} 30{,}0~\orange{\si{km}/\si{h}} &= 30{,}0 \cdot \orange{\frac{1}{3{,}6}~\si{m}/\si{s}}\\ &= \frac{30{,}0}{\orange{3{,}6}}~\orange{\si{m}/\si{s}}\\ &= 8{,}33~\si{m}/\si{s}\end{aligned}$$ |
+| meter per seconde ($\si{m}/\si{s}$)  | kilometer per uur ($\si{km}/\si{h}$) | $$\begin{aligned} 1 \si{ km}/\si{h} &= \frac{1}{3{,}6} \si{ m}/\si{s}\\ &\Updownarrow\\ \orange{3{,}6}\cdot 1 \si{ km}/\si{h} &= \orange{3{,}6}\cdot \frac{1}{3{,}6} \si{ m}/\si{s}\\ &\Updownarrow\\ \orange{3{,}6} \si{ km}/\si{h} &= 1 \si{ m}/\si{s}\\ &\Updownarrow\\ 1 \si{ m}/\si{s} &= \orange{3{,}6} \si{ km}/\si{h} \end{aligned}$$ | $1 \si{ m}/\si{s} = 3{,}6 \si{ km}/\si{h}$          | $$\begin{aligned} 25{,}0~\orange{\si{m}/\si{s}} &= 25{,}0 \cdot \orange{3{,}6~\si{km}/\si{h}}\\ &= 90{,}0~\si{km}/\si{h} \end{aligned}$$                                                                        |
 
 ## Volumes omzetten
 
 In het dagelijkse leven drukt men volumes meestal uit in liter ($\si{l}$) of
 een afgeleide hiervan (vnl. $\si{ml}$, $\si{cl}$ of $\si{dl}$). De SI-eenheid
 voor volume is echter de kubieke meter ($\si{m}^3$). Een omzetting tussen
-beiden is niet zo voor de hand liggend. Het belangrijkste dat je moet onthouden
+beide is niet zo voor de hand liggend. Het belangrijkste dat je moet onthouden
 is:
 
 
@@ -104,7 +114,7 @@ $10 \si{ cm}$ en een met zijden van $1 \si{ cm}$. Welke van deze kubussen heeft
 ongeveer hetzelfde volume als het melkkarton? Ter illustratie <Mute>(de
 figuur is niet op exacte schaal, maar geeft wel een idee van de groottes)</Mute>:
 
-![](img/liter_conversion.png)
+![Een liter is gelijk aan een kubieke decimeter](img/liter_conversion.png)
 
 Je ziet dat de kubus met een zijde van $1 \si{ dm}$ <Mute>($= 10 \si{
 cm}$)</Mute> ongeveer hetzelfde volume heeft als de fles melk, en inderdaad $1
@@ -114,8 +124,8 @@ Hiermee kan je dan aan de slag om de omzetting te doen tussen liter en kubieke m
 
 | Van        | Naar       | Afleiding                                                                                                                                                                                                                                                                            | Kort gezegd                     | Voorbeeld |
 | ---------- | ---------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------- | --------- |
-| $\si{l}$   | $\si{m}^3$ | $$\begin{aligned} 1 \si{ l} &= 1 \blue{\si{ d}} \si{m}^3\\ &= 1 \cdot (\blue{10^{-1}}\si{ m})^3\\ &= 1 \cdot (\blue{10^{-1}})^3 \si{ m}^3\\ &= 10^{-3} \si{ m}^3 \end{aligned} $$                                                                                                    | $1 \si{ l} = 10^{-3} \si{ m}^3$ |           |
-| $\si{m}^3$ | $\si{l}$   | $$\begin{aligned} 1 \si{ l} &= 10^{-3} \si{ m}^3 \\ \Updownarrow \\ \orange{10^3} \cdot 1 \si{ l} &= \orange{10^3} \cdot 10^{-3} \si{ m}^3 \\ \Updownarrow \\ \orange{10^3} \si{ l} &= 1 \si{ m}^3 \\ \Updownarrow \\ 1 \si{ m}^3 &= \orange{10^3} \si{ l} \end{aligned} $$ | $1 \si{ m}^3 = 10^3 \si{ l}$    |           |
+| liter ($\si{l}$)   | kubieke meter ($\si{m}^3$) | $$\begin{aligned} 1 \si{ l} &= 1 \blue{\si{ d}} \si{m}^3\\ &= 1 \cdot (\blue{10^{-1}}\si{ m})^3\\ &= 1 \cdot (\blue{10^{-1}})^3 \si{ m}^3\\ &= 10^{-3} \si{ m}^3 \end{aligned}$$                                                                                                    | $1 \si{ l} = 10^{-3} \si{ m}^3$ |   $$\begin{aligned}7{,}0~\orange{\si{l}} &= 7{,}0\cdot\orange{10^{-3}~\si{m}^3} \end{aligned}$$      |
+| kubieke meter ($\si{m}^3$) | liter ($\si{l}$)   | $$\begin{aligned} 1 \si{ l} &= 10^{-3} \si{ m}^3 \\ \Updownarrow \\ \orange{10^3} \cdot 1 \si{ l} &= \orange{10^3} \cdot 10^{-3} \si{ m}^3 \\ \Updownarrow \\ \orange{10^3} \si{ l} &= 1 \si{ m}^3 \\ \Updownarrow \\ 1 \si{ m}^3 &= \orange{10^3} \si{ l} \end{aligned}$$ | $1 \si{ m}^3 = 10^3 \si{ l}$    |   $$\begin{aligned}23{,}5~\orange{\si{m}^3} &= 23{,}5\cdot\orange{10^{3}~\si{l}} \end{aligned}$$        |
 
 ## Massadichtheid omzetten
 
@@ -123,5 +133,5 @@ Ten slotte tonen we hoe je de omzetting van $\si{g}/\si{ml}$ naar $\si{kg}/\si{m
 
 | Van                | Naar               | Afleiding                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | Kort gezegd                                     | Voorbeeld |
 | ------------------ | ------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------- | --------- |
-| $\si{g}/\si{ml}$   | $\si{kg}/\si{m}^3$ | $$\begin{aligned} 1 \frac{\si{g}}{\blue{\si{m}}\orange{\si{l}}} &= 1 \frac{\si{g}}{\blue{10^{-3}}\cdot\orange{10^{-3}\si{ m}^3}}\\ &= \frac{1}{10^{(\blue{-3}) + (\orange{-3})}} \frac{\si{g}}{\si{ m}^3}\\ &= \frac{1}{10^{-6}} \frac{\si{g}}{\si{ m}^3}\\ &= 10^{6} \frac{\si{g}}{\si{ m}^3}\\ &= 10^{6} \frac{\pink{10^{-3}}\cdot\green{10^3}\si{g}}{\si{ m}^3}\\ &= 10^{6}\cdot \pink{10^{-3}}\frac{\green{\si{k}}\si{g}}{\si{ m}^3}\\ &= 10^{3} \frac{\green{\si{k}}\si{g}}{\si{ m}^3}\\ \end{aligned} $$ | $1\si{ g}/\si{ml} = 10^3 \si{ kg}/\si{m}^3$     |           |
-| $\si{kg}/\si{m}^3$ | $\si{g}/\si{ml}$   | $$\begin{aligned} 1 \frac{\si{g}}{\si{ml}} &= 10^3 \frac{\si{ kg}}{\si{m}^3}\\ &\Updownarrow \\ \frac{1 \si{ g}/\si{ml}}{\orange{10^3}} &= \frac{10^3 \si{ kg}/\si{m}^3}{\orange{10^3}}\\ &\Updownarrow \\ \frac{1}{\orange{10^3}} \frac{\si{ g}}{\si{ml}} &= 1\frac{\si{kg}}{\si{m}^3}\\ &\Updownarrow \\ 1\frac{\si{kg}}{\si{m}^3} &= \frac{1}{\orange{10^3}} \frac{\si{ g}}{\si{ml}} \\ &\Updownarrow \\ 1\frac{\si{kg}}{\si{m}^3} &= 10^{-3} \frac{\si{ g}}{\si{ml}}\end{aligned} $$                    | $1\si{ kg}/\si{m}^3 = 10^{-3} \si{ g}/\si{ml} $ |           |
+| gram per milliliter ($\si{g}/\si{ml}$)   | kilogram per kubieke meter ($\si{kg}/\si{m}^3$) | $$\begin{aligned} 1 \frac{\si{g}}{\blue{\si{m}}\orange{\si{l}}} &= 1 \frac{\si{g}}{\blue{10^{-3}}\cdot\orange{10^{-3}\si{ m}^3}}\\ &= \frac{1}{10^{(\blue{-3}) + (\orange{-3})}} \frac{\si{g}}{\si{ m}^3}\\ &= \frac{1}{10^{-6}} \frac{\si{g}}{\si{ m}^3}\\ &= 10^{6} \frac{\si{g}}{\si{ m}^3}\\ &= 10^{6} \frac{\pink{10^{-3}}\cdot\green{10^3}\si{g}}{\si{ m}^3}\\ &= 10^{6}\cdot \pink{10^{-3}}\frac{\green{\si{k}}\si{g}}{\si{ m}^3}\\ &= 10^{3} \frac{\green{\si{k}}\si{g}}{\si{ m}^3}\\ \end{aligned}$$ | $1\si{ g}/\si{ml} = 10^3 \si{ kg}/\si{m}^3$     |     $$\begin{aligned} 91{,}6~\orange{\si{g}/\si{ml}} &= 91{,}6\cdot\orange{10^3~\si{kg}/\si{m}^3} \end{aligned}$$      |
+| kilogram per kubieke meter ($\si{kg}/\si{m}^3$) | gram per milliliter ($\si{g}/\si{ml}$)   | $$\begin{aligned} 1 \frac{\si{g}}{\si{ml}} &= 10^3 \frac{\si{ kg}}{\si{m}^3}\\ &\Updownarrow \\ \frac{1 \si{ g}/\si{ml}}{\orange{10^3}} &= \frac{10^3 \si{ kg}/\si{m}^3}{\orange{10^3}}\\ &\Updownarrow \\ \frac{1}{\orange{10^3}} \frac{\si{ g}}{\si{ml}} &= 1\frac{\si{kg}}{\si{m}^3}\\ &\Updownarrow \\ 1\frac{\si{kg}}{\si{m}^3} &= \frac{1}{\orange{10^3}} \frac{\si{ g}}{\si{ml}} \\ &\Updownarrow \\ 1\frac{\si{kg}}{\si{m}^3} &= 10^{-3} \frac{\si{ g}}{\si{ml}}\end{aligned}$$                    | $1\si{ kg}/\si{m}^3 = 10^{-3} \si{ g}/\si{ml}$ |     $$\begin{aligned} 4{,}68~\orange{\si{kg}/\si{m}^3} &= 4{,}68\cdot\orange{10^{-3}~\si{g}/\si{ml}} \end{aligned}$$      |
